<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">munira_s_application5</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_the_quotes_will">The quotes will appear here </string>
  <string name="lbl_clear_list">clear list </string>
  <string name="lbl_email">email </string>
  <string name="msg_register_instea">register instead</string>
  <string name="msg_the_beginning_i">The Beginning is the most important part of the work</string>
  <string name="lbl_login2">login</string>
  <string name="lbl_register2">register</string>
  <string name="msg_all_saved_quote">All saved quotes will be here </string>
  <string name="lbl_change_email">change email </string>
  <string name="lbl_password">Password</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_delete_account">Delete Account </string>
  <string name="lbl_login">Login</string>
  <string name="lbl_register">Register</string>
  <string name="msg_daily_beautiful">Daily beautiful quotes</string>
  <string name="lbl_change_password">change password </string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
