<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="favouritesVM" type="com.munirasapplication.app.modules.favourites.data.viewmodel.FavouritesVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearFavourites"
        android:layout_height="match_parent"
        android:layout_marginTop="2.1dp"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_901">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnthebeginningi"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">

            <TextView android:id="@+id/txtTheBeginningi"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="match_parent"
                android:text="@{favouritesVM.favouritesModel.txtTheBeginningi}"
                style="@style/txtSanchezregular16" tools:text="@string/msg_the_beginning_i"/>

            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{favouritesVM.favouritesModel.txtLanguage}"
                style="@style/txtSanchezregular16" tools:text="@string/msg_the_quotes_will"/>

            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_76pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{favouritesVM.favouritesModel.txtLanguageOne}"
                style="@style/txtSanchezregular16" tools:text="@string/msg_all_saved_quote"/>


            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnClearList"
                android:layout_gravity="end"
                android:layout_height="@dimen/_40pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_247pxv"
                android:layout_width="@dimen/_200pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_clear_list"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_clear_list"/>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_600_8c">
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home_black_903"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home_black_903"/>

                <ImageView android:id="@+id/imageBookmark"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_101pxh"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_bookmark"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_bookmark"/>

                <ImageView android:id="@+id/imageLock"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:layout_marginStart="@dimen/_110pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lock"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_lock"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
